Fixed #542, also the button color which broken in few commits before

--- a/src/partials/elements/_button.sass
+++ b/src/partials/elements/_button.sass
@@ -20,7 +20,8 @@
     &:active:not(.opinion),
     &.dropdown.visible,
     &.active
-        background: $activeColor
+        background: $activeBackgroundColor
+        color     : $activeColor
 
     &:not(.visible):not(.hidden):not(.active):not(:active):not(.opinion):hover
         background: $hoverBackgroundColor
@@ -124,8 +125,8 @@
 
 .ts.secondary.button:not(.basic):not(.opinion):not(:hover):not(:active):not(.active),
 .ts.secondary.buttons:not(.basic):not(.opinion) .ts.button:not(:hover):not(:active):not(.active)
-    background: $white
-    border-color    : transparent
+    background  : $white
+    border-color: transparent
 
 //-------------------//
 //      Pulsing
@@ -419,7 +420,8 @@
 .ts.buttons.fluid,
 .ts.buttons.fluid .button
     width: 100%
-    flex : 1
+    // This effects the .ts.buttons in card
+    // flex : 1
 
 //-------------------//
 //      Compact
@@ -682,30 +684,30 @@
 
 .ts.button.opinion,
 .ts.buttons.opinion .button
-    border-color    : transparent
-    background: rgba(0, 0, 0, 0.05)
-    color           : #FFF
+    border-color: transparent
+    background  : rgba(0, 0, 0, .05)
+    color       : #FFF
 
     &:hover:not(.active):not(:active)
-        background: rgba(0, 0, 0, 0.1)
-        color           : #FFF
+        background: rgba(0, 0, 0, .1)
+        color     : #FFF
     &:active,
     &.active
-        background: rgba(0, 0, 0, 0.3)
-        color           : #FFF
+        background: rgba(0, 0, 0, .3)
+        color     : #FFF
 
 .ts.button.secondary.opinion,
 .ts.buttons.secondary.opinion .button
-    background: rgba(0, 0, 0, 0.15)
-    color           : #FFF
+    background: rgba(0, 0, 0, .15)
+    color     : #FFF
 
     &:hover:not(.active):not(:active)
-        background: rgba(0, 0, 0, 0.2)
-        color           : #FFF
+        background: rgba(0, 0, 0, .2)
+        color     : #FFF
     &:active,
     &.active
-        background: rgba(0, 0, 0, 0.4)
-        color           : #FFF
+        background: rgba(0, 0, 0, .4)
+        color     : #FFF
 
 //-------------------//
 //       Basic
@@ -720,30 +722,30 @@
 /* Basic */
 .ts.button.basic:not(.primary):not(.info):not(.warning):not(.positive):not(.negative):not(.secondary),
 .ts.buttons.basic:not(.primary):not(.info):not(.warning):not(.positive):not(.negative):not(.secondary) .button
-    background: transparent
-    border-color    : lighten($button_defaultTextColor, 50%)
-    color           : $button_defaultTextColor
+    background  : transparent
+    border-color: lighten($button_defaultTextColor, 50%)
+    color       : $button_defaultTextColor
     &:hover:hover:hover:hover:not(.active):not(:active)
         background: $button_defaultTextColor
-        color           : #FFF
+        color     : #FFF
     &:active:active:active:active,
     &.active.active.active.active
         background: darken($button_defaultTextColor, 10%)
-        color           : darken($button_defaultTextColor, 20%)
+        color     : darken($button_defaultTextColor, 20%)
 
 /* Secondary Basic */
 .ts.button.basic.secondary:not(.primary):not(.info):not(.warning):not(.positive):not(.negative),
 .ts.buttons.basic.secondary:not(.primary):not(.info):not(.warning):not(.positive):not(.negative) .button
-    background: transparent
-    border-color    : lighten($button_defaultTextColor, 60%)
-    color           : lighten($button_defaultTextColor, 20%)
+    background  : transparent
+    border-color: lighten($button_defaultTextColor, 60%)
+    color       : lighten($button_defaultTextColor, 20%)
     &:hover:hover:hover:hover:not(.active):not(:active)
         background: lighten($button_defaultTextColor, 20%)
-        color           : #FFF
+        color     : #FFF
     &:active:active:active:active,
     &.active.active.active.active
         background: darken(lighten($button_defaultTextColor, 20%), 10%)
-        color           : darken(lighten($button_defaultTextColor, 20%), 20%)
+        color     : darken(lighten($button_defaultTextColor, 20%), 20%)
 
 .ts.button.basic.inverted,
 .ts.buttons.basic.inverted .button,
